edit input field news and update page

--- a/css/newsUpdate.css
+++ b/css/newsUpdate.css
@@ -124,9 +124,9 @@ input{
 	text-decoration-style: none;
 	color: #FFFFFF;
 	background-color:#112D4E;
-	width:25%;
+	width:26%;
 	margin: 10px;
-	padding: 5px;
+	padding: auto;
 
 }
 
